<resources>
    <string name="app_name">USTHWeather</string>
    <string name="title_activity_weather">USTH Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="monday">Mon</string>
    <string name="rainy">Rainy</string>
    <string name="cloudy">Cloudy</string>
    <string name="rain_temp">18C - 20C</string>
    <string name="cloud_temp">22C-30C</string>
    <string name="tuesday">Tue</string>
    <string name="snowy">Snowy</string>
    <string name="snowy_temp">-1C - 2C</string>
    <string name="wednesday">Wed</string>
    <string name="sunny">Sunny</string>
    <string name="sunny_temp">35C - 40C</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="thunder">Thunder</string>
    <string name="thunder_temp">16C - 18C</string>
    <string name="saturday">Sat</string>
    <string name="typhoon">Typhoon</string>
    <string name="typhoon_temp">15C - 20C</string>
    <string name="sunday">Sun</string>
    <string name="Hawaii">Hawaii</string>
    <string name="day">Day</string>
    <string name="temperature">Temperature</string>
    <string name="weather">Weather</string>
    <string name="refresh_icon">Refresh</string>
    <string name="three_dots">Three dots</string>
    <string name="title_activity_pref">PrefActivity</string>
    <string name="setting_icon">Setting Icon</string>
    <string name="back_button">Back Button</string>
</resources>