<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_forecast"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical"
    android:gravity="center"
    tools:context=".ForecastFragment">
<!--    android:paddingTop="100dp"-->
<!--    android:paddingLeft="40dp"-->
<!--    android:paddingRight="40dp"-->
<!--    android:paddingBottom="40dp"-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="#66ebfa">
<!--        android:padding="20dp">-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginEnd="63dp"
            android:text="@string/monday"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="50dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cloudy"
            android:scaleType="fitCenter"
            android:src="@drawable/cloudy" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/cloud_temp"
            android:textColor="@color/black"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_gravity="center"
        android:padding="16dp"
        android:background="#66ebfa">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuesday"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:layout_marginEnd="65dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="50dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src = "@drawable/snowflake"
            android:contentDescription="@string/snowy" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/snowy_temp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_gravity="center"
        android:padding="20dp"
        android:background="#66ebfa">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginEnd="40dp"
            android:text="@string/wednesday"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="50dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/sun"
            android:contentDescription="@string/sunny" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/sunny_temp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_gravity="center"
        android:padding="20dp"
        android:background="#66ebfa">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="55dp"
            android:gravity="center_vertical"
            android:text="@string/thursday"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_marginEnd="50dp"
            android:src="@drawable/rainy"
            android:contentDescription="@string/rainy" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/rain_temp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_gravity="center"
        android:padding="20dp"
        android:background="#66ebfa">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="74dp"
            android:gravity="center_vertical"
            android:text="@string/friday"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_marginEnd="50dp"
            android:src="@drawable/thunder"
            android:contentDescription="@string/thunder" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/thunder_temp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_gravity="center"
        android:padding="20dp"
        android:background="#66ebfa">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="57dp"
            android:gravity="center_vertical"
            android:text="@string/saturday"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="50dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/typhoon"
            android:contentDescription="@string/typhoon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/typhoon_temp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_gravity="center"
        android:padding="20dp"
        android:background="#66ebfa">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:gravity="center_vertical"
            android:text="@string/sunday"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="50dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/sun"
            android:contentDescription="@string/sunny" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/sunny_temp"
            android:textColor="@color/black"/>
    </LinearLayout>


</LinearLayout>